Fixed Bmenu Design and Spacing

--- a/capsone-barangay-portal/CSS/BMenu/header.css
+++ b/capsone-barangay-portal/CSS/BMenu/header.css
@@ -10,7 +10,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  padding-top: 1rem;
+  gap: 5px;
   background-color: rgba(255, 255, 255, 0.9);
   border: 1px solid #ddd;
   z-index: 1000;
@@ -23,20 +23,15 @@
   justify-content: flex-start;
   align-items: center;
   width: 100%;
+  
+}
+
+.logo {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
 }
 
 
-.module {
-  padding: 1rem;
-  color: grey;
-  font-size: 1rem;
-  font-weight: bold;
-  text-align: center;
-  width: 100%;
-  cursor: pointer;
-  position: relative;
-
-}
 
 .module:hover {
   background-color: #D9D9D9;
@@ -66,6 +61,18 @@
   cursor: pointer;
 }
 
+.module {
+  padding: 1rem;
+  color: grey;
+  font-size: 1rem;
+  font-weight: bold;
+  text-align: center;
+  width: 100%;
+  cursor: pointer;
+  position: relative;
+
+}
+
 .dropdown-button a {
   flex-grow: 1;
   text-align: center;
@@ -77,7 +84,7 @@
   margin-left: auto;
 }
 
-/* Dropdown container */
+
 .dropdown-container {
   display: none;
   flex-direction: column;
